Bug 328973 - Strange behavior of POS1 and END keys on editing a list view item
Summary: Strange behavior of POS1 and END keys on editing a list view item
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-18 17:11 UTC by Ralf Habacker
Modified: 2014-01-22 20:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-12-18 17:11:48 UTC
When editing a line edit in umbrello, the POS1 and END key behaves normally in a way, that it sets the cursor at the beginning rsp. end of the line edit. 

Editing of a list view item do not follow this ui style. After starting the edit with F2 or right-mouse-click->rename, pressing the POS1 and END key cancels the edit and selects the top rsp. last list item. 


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. edit a datatype by selecting 'int' and press F2
3. press POS1 or END
Actual Results:  
pressing POS1 cancels the edit and selects the first list item, pressing END selects the last list item.


Expected Results:  
After pressing POS1 and END the edit should not be canceled and the cursor should be set at the start rsp. end of the edit field
Comment 1 Ralf Habacker 2013-12-18 17:40:29 UTC
Git commit 584f826f08adcfe4bb11cf33e134f1b336fd899c by Ralf Habacker.
Committed on 18/12/2013 at 02:18.
Pushed by habacker into branch 'master'.

Fix of 'When editing a list view item POS1 and END key performs wrong'.

M  +15   -4    umbrello/uml.cpp
M  +1    -1    umbrello/uml.h
M  +22   -115  umbrello/umllistview.cpp
M  +1    -7    umbrello/umllistview.h

http://commits.kde.org/umbrello/584f826f08adcfe4bb11cf33e134f1b336fd899c
Comment 2 Joris Steyn 2013-12-20 07:15:29 UTC
Git commit 516d2b3da1449aefbf1f64205bc2370613c6a680 by Joris Steyn.
Committed on 20/12/2013 at 07:10.
Pushed by jorissteyn into branch 'master'.

Remove connect of deleted slotItemChanged

M  +0    -1    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/516d2b3da1449aefbf1f64205bc2370613c6a680
Comment 3 Ralf Habacker 2013-12-20 08:09:42 UTC
Git commit dd4dd14ebc3250676108cbbfea3215c19119912d by Ralf Habacker, on behalf of Joris Steyn.
Committed on 20/12/2013 at 07:10.
Pushed by habacker into branch 'KDE/4.12'.

Remove connect of deleted slotItemChanged
(cherry picked from commit 516d2b3da1449aefbf1f64205bc2370613c6a680)

M  +0    -1    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/dd4dd14ebc3250676108cbbfea3215c19119912d
Comment 4 Ralf Habacker 2013-12-20 22:47:16 UTC
Git commit 456651ddc29e5e781afb0074efe70ade1d3a7576 by Ralf Habacker.
Committed on 18/12/2013 at 02:18.
Pushed by habacker into branch 'KDE/4.12'.

Fix of 'When editing a list view item POS1 and END key performs wrong'.
(cherry picked from commit 584f826f08adcfe4bb11cf33e134f1b336fd899c)

Conflicts:
	umbrello/umllistview.cpp
	umbrello/umllistview.h

M  +15   -4    umbrello/uml.cpp
M  +1    -1    umbrello/uml.h
M  +23   -117  umbrello/umllistview.cpp
M  +1    -7    umbrello/umllistview.h

http://commits.kde.org/umbrello/456651ddc29e5e781afb0074efe70ade1d3a7576
Comment 5 Ralf Habacker 2013-12-21 08:59:53 UTC
Git commit 56728206dba4cb4abd1b87bf918d435d17ec736c by Ralf Habacker, on behalf of Joris Steyn.
Committed on 20/12/2013 at 07:10.
Pushed by habacker into branch 'KDE/4.11'.

Remove connect of deleted slotItemChanged
(cherry picked from commit 516d2b3da1449aefbf1f64205bc2370613c6a680)

M  +0    -1    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/56728206dba4cb4abd1b87bf918d435d17ec736c
Comment 6 Ralf Habacker 2013-12-21 08:59:53 UTC
Git commit adee4d19dda4a378b092aaf4016bcc2f001dd453 by Ralf Habacker.
Committed on 18/12/2013 at 02:18.
Pushed by habacker into branch 'KDE/4.11'.

Fix of 'When editing a list view item POS1 and END key performs wrong'.
(cherry picked from commit 584f826f08adcfe4bb11cf33e134f1b336fd899c)

Conflicts:
	umbrello/uml.cpp
	umbrello/umllistview.cpp
	umbrello/umllistview.h

M  +16   -5    umbrello/uml.cpp
M  +1    -1    umbrello/uml.h
M  +23   -117  umbrello/umllistview.cpp
M  +1    -7    umbrello/umllistview.h

http://commits.kde.org/umbrello/adee4d19dda4a378b092aaf4016bcc2f001dd453
Comment 7 Ralf Habacker 2013-12-23 16:00:16 UTC
Git commit 86a1b2a5cccdcf005a6a092565cda368f9b07026 by Ralf Habacker.
Committed on 23/12/2013 at 15:25.
Pushed by habacker into branch 'master'.

Reenable routing of in place list item rename to related UML objects.

M  +28   -0    umbrello/umllistview.cpp
M  +1    -0    umbrello/umllistview.h
M  +4    -13   umbrello/umllistviewitem.cpp
M  +3    -3    umbrello/umllistviewitem.h

http://commits.kde.org/umbrello/86a1b2a5cccdcf005a6a092565cda368f9b07026
Comment 8 Ralf Habacker 2013-12-23 16:08:02 UTC
Git commit b326fd89d6931972b87b21d35b33ff4ffbd6a097 by Ralf Habacker.
Committed on 23/12/2013 at 15:25.
Pushed by habacker into branch 'KDE/4.11'.

Reenable routing of in place list item rename to related UML objects.
(cherry picked from commit 86a1b2a5cccdcf005a6a092565cda368f9b07026)

M  +28   -0    umbrello/umllistview.cpp
M  +1    -0    umbrello/umllistview.h
M  +4    -13   umbrello/umllistviewitem.cpp
M  +3    -3    umbrello/umllistviewitem.h

http://commits.kde.org/umbrello/b326fd89d6931972b87b21d35b33ff4ffbd6a097
Comment 9 Ralf Habacker 2013-12-23 16:11:56 UTC
Git commit 422aeee502e6d84a9e56b3c562b4623a3a76910f by Ralf Habacker.
Committed on 23/12/2013 at 15:25.
Pushed by habacker into branch 'KDE/4.12'.

Reenable routing of in place list item rename to related UML objects.
(cherry picked from commit 86a1b2a5cccdcf005a6a092565cda368f9b07026)

M  +28   -0    umbrello/umllistview.cpp
M  +1    -0    umbrello/umllistview.h
M  +4    -13   umbrello/umllistviewitem.cpp
M  +3    -3    umbrello/umllistviewitem.h

http://commits.kde.org/umbrello/422aeee502e6d84a9e56b3c562b4623a3a76910f