Fix of 'When editing a list view item POS1 and END key performs wrong'.

BUG: 328973
(cherry picked from commit 584f826f08adcfe4bb11cf33e134f1b336fd899c)

Conflicts:
	umbrello/uml.cpp
	umbrello/umllistview.cpp
	umbrello/umllistview.h